--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-motion": "^1.1.0",
     "vite": "^6.3.5"
   }
 }
