--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ dist-ssr/
 # Env files
 .env
 .env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Test coverage
 coverage/
